WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60429
Crash when sending a wheel event to a node with no shadow ancestor node
https://bugs.webkit.org/show_bug.cgi?id=60429
Summary
Crash when sending a wheel event to a node with no shadow ancestor node
Jon Lee
Reported
2011-05-06 19:54:39 PDT
Scrolling around this url causes the crash:
http://upload.wikimedia.org/wikipedia/commons/7/74/Timeline_of_web_browsers.svg
Attachments
Patch
(1.90 KB, patch)
2011-05-06 20:01 PDT
,
Jon Lee
alice.barraclough
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jon Lee
Comment 1
2011-05-06 19:57:57 PDT
<
rdar://problem/9389619
>
Jon Lee
Comment 2
2011-05-06 20:01:36 PDT
Created
attachment 92683
[details]
Patch
mitz
Comment 3
2011-05-06 20:34:29 PDT
Is it not possible to add a regression test for this?
Jon Lee
Comment 4
2011-05-07 00:17:05 PDT
http://trac.webkit.org/changeset/86002
Jon Lee
Comment 5
2011-05-07 00:22:37 PDT
i thought it would not be possible because it would involve user input. I think the best kind of test would involve a reduction .svg, and then move the mouse over a text element in the .svg, and scroll. if that is possible then i can write a test for this.
mitz
Comment 6
2011-05-07 00:27:25 PDT
You can use the eventSender object to simulate moving the mouse and using the scroll wheel, something like if (window.eventSender) { eventSender.mouseMoveTo(100, 100); eventSender.mouseScrollBy(0, 10); }
Ademar Reis
Comment 7
2011-05-26 15:40:49 PDT
Revision
r86002
cherry-picked into qtwebkit-2.2 with commit 6b2f436 <
http://gitorious.org/webkit/qtwebkit/commit/6b2f436
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug