Crash when sending a wheel event to a node with no shadow ancestor node https://bugs.webkit.org/show_bug.cgi?id=60429 <rdar://problem/9389619>

Reviewed by Alice Liu.

* page/EventHandler.cpp:
(WebCore::EventHandler::handleWheelEvent):add check to see if the shadow ancestor node of the node that was under the mouse exists before trying to dispatch the wheel event to it.

git-svn-id: svn://svn.chromium.org/blink/trunk@86002 bbb929c8-8fbe-4397-9dbb-9b2b20218538