third_party/WebKit/Source/WebCore/page/EventHandler.cpp
@@ -2123,7 +2123,7 @@ bool EventHandler::handleWheelEvent(PlatformWheelEvent& e)
         }
 
         node = node->shadowAncestorNode();
-        if (!node->dispatchWheelEvent(e)) {
+        if (node && !node->dispatchWheelEvent(e)) {
             e.accept();
             return true;
         }
